RESOLVED FIXED157726
DFG::Plan shouldn't read from its VM once it's been cancelled
https://bugs.webkit.org/show_bug.cgi?id=157726
Summary DFG::Plan shouldn't read from its VM once it's been cancelled
Filip Pizlo
Reported 2016-05-15 15:06:31 PDT
Patch forthcoming.
Attachments
the patch (14.54 KB, patch)
2016-05-15 15:31 PDT, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2016-05-15 15:31:59 PDT
Created attachment 278981 [details] the patch
WebKit Commit Bot
Comment 2 2016-05-15 15:33:14 PDT
Attachment 278981 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGPlan.cpp:141: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/dfg/DFGPlan.cpp:147: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3 2016-05-15 15:35:10 PDT
Comment on attachment 278981 [details] the patch r=me
Filip Pizlo
Comment 4 2016-05-15 16:07:48 PDT
Note You need to log in before you can comment on or make changes to this bug.